nuevo index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nelson Damien Alexander Duarte Gutiérrez - CV</title>
+  <title>Missael Duarte - CV</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
     body {
@@ -73,8 +73,8 @@
 </head>
 <body>
   <header>
-    <h1>Nelson Damien Alexander Duarte Gutiérrez</h1>
-    <p>Estudiante de Ingeniería en Informática | Técnico en Electrónica</p>
+    <h1>Missael (Nelson) Duarte</h1>
+    <p>Estudiante de Ingeniería en Informática | Técnico en Electrónica | Analista de Datos</p>
     <div class="contact">
       📧 <a href="mailto:missaduarte13@gmail.com">missaduarte13@gmail.com</a> |
       📱 +56 9 9701 0218 |
@@ -86,18 +86,16 @@
     <section>
       <h2>Perfil Profesional</h2>
       <p>
-        Soy estudiante de <strong>Ingeniería en Informática en INACAP</strong>, con formación técnica en <strong>Electrónica</strong>.
-        Me especializo en la <strong>gestión, diseño y optimización de bases de datos</strong> en entornos OLTP y OLAP, además del uso
-        de herramientas tecnológicas para resolver problemas complejos.
+        Soy estudiante de <strong>Ingeniería en Informática en INACAP</strong> con formación técnica en <strong>Electrónica</strong>.
+        Tengo experiencia en <strong>análisis de datos, inteligencia de negocios y visualización de información</strong>, utilizando herramientas como <strong>Power BI, SQL, Python, RStudio y Chart.js</strong>. 
+        He desarrollado proyectos que integran <strong>gestión de datos, diseño de dashboards y reportes dinámicos</strong> que permiten la toma de decisiones basada en información precisa.
       </p>
       <p>
-        He desarrollado proyectos que combinan <strong>análisis de datos, programación y diseño de sistemas</strong>, utilizando
-        <strong>RStudio, Python, SQL, Chart.js</strong> y <strong>Visual Studio Code</strong>. Estas experiencias fortalecieron mis capacidades
-        técnicas y mi pensamiento analítico, junto con una fuerte orientación al trabajo colaborativo y la innovación.
+        Mis competencias incluyen <strong>modelado de datos, ETL, análisis de KPIs, creación de informes interactivos y automatización de procesos</strong>. 
+        Además, destaco por mi <strong>capacidad analítica, pensamiento lógico y orientación a la innovación</strong>, aplicando soluciones tecnológicas a problemas reales.
       </p>
       <p>
-        Me considero una persona tranquila, responsable y motivada por seguir aprendiendo, aplicando la tecnología para crear
-        soluciones que generen valor y eficiencia en los procesos informáticos.
+        Soy una persona responsable, proactiva y motivada por seguir aprendiendo, enfocándome en aportar valor en entornos de análisis de datos y desarrollo de sistemas inteligentes.
       </p>
     </section>
 
@@ -106,9 +104,19 @@
       <p><strong>Practicante – Electrónica Fujicorp S.A.</strong><br>
       <em>Santiago, Chile | Noviembre 2021 – Diciembre 2021</em></p>
       <ul>
-        <li>Atención al cliente y diagnóstico de fallas en dispositivos.</li>
+        <li>Atención al cliente y diagnóstico de fallas en dispositivos electrónicos.</li>
         <li>Reparación y mantención de hardware como teclados, mouses y audífonos.</li>
         <li>Desarrollo de habilidades técnicas y trato profesional con usuarios finales.</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Proyectos y Experiencia en BI</h2>
+      <ul>
+        <li>Desarrollo de dashboards interactivos en <strong>Power BI</strong> para la gestión de inventarios y análisis de ventas, incluyendo KPIs de desempeño y reportes automáticos.</li>
+        <li>Integración de datos de múltiples fuentes (bases de datos SQL, Excel y CSV) mediante procesos ETL.</li>
+        <li>Visualización de información mediante gráficos dinámicos y segmentación de datos para identificar tendencias y oportunidades de mejora.</li>
+        <li>Análisis de datos internos y externos para la toma de decisiones estratégicas en proyectos académicos y profesionales, incluyendo el proyecto <strong>Weigence</strong>.</li>
       </ul>
     </section>
 
@@ -136,7 +144,7 @@
   </main>
 
   <footer>
-    © 2025 Nelson Duarte | CV Online desarrollado con ❤️ en Vercel
+    © 2025 Missael Duarte | CV Online desarrollado en Vercel
   </footer>
 </body>
 </html>
