--- a/index.html
+++ b/index.html
@@ -5,71 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Missael Duarte - CV</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      background-color: #f4f6fa;
-      color: #222;
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
-    }
-    header {
-      background-color: #1f2937;
-      color: white;
-      padding: 3rem 1rem;
-      text-align: center;
-    }
-    header h1 {
-      font-size: 2rem;
-      margin-bottom: 0.5rem;
-    }
-    header p {
-      margin: 0.2rem 0;
-      font-weight: 300;
-    }
-    main {
-      max-width: 900px;
-      margin: 2rem auto;
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      padding: 2rem;
-    }
-    section {
-      margin-bottom: 2rem;
-    }
-    h2 {
-      color: #1f2937;
-      border-bottom: 2px solid #3b82f6;
-      display: inline-block;
-      padding-bottom: 4px;
-    }
-    ul {
-      padding-left: 1rem;
-    }
-    li {
-      margin-bottom: 0.5rem;
-    }
-    .contact {
-      margin-top: 0.5rem;
-      font-size: 0.95rem;
-    }
-    .contact a {
-      color: #3b82f6;
-      text-decoration: none;
-    }
-    .contact a:hover {
-      text-decoration: underline;
-    }
-    footer {
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      color: #555;
-      border-top: 1px solid #ddd;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
