--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Missael Duarte - CV</title>
+  <title>Nelson Duarte - CV</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Missael (Nelson) Duarte</h1>
-    <p>Estudiante de Ingeniería en Informática | Técnico en Electrónica | Analista de Datos</p>
+    <h1>Nelson Duarte</h1>
+    <p>Estudiante de Ingeniería en Informática | Técnico en Electrónica</p>
     <div class="contact">
       📧 <a href="mailto:missaduarte13@gmail.com">missaduarte13@gmail.com</a> |
       📱 +56 9 9701 0218 |
@@ -84,3 +84,4 @@
   </footer>
 </body>
 </html>
+
