--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h1>Nelson Duarte</h1>
     <p>Estudiante de Ingeniería en Informática | Técnico en Electrónica</p>
     <div class="contact">
-      📧 <a href="mailto:missaduarte13@gmail.com">missaduarte13@gmail.com</a> |
-      📱 +56 9 9701 0218 |
-      🔗 <a href="https://www.linkedin.com/in/nelson-duarte-9b572433b" target="_blank">LinkedIn</a>
+       <a href="mailto:missaduarte13@gmail.com">missaduarte13@gmail.com</a> |
+       +56 9 9701 0218 |
+       <a href="https://www.linkedin.com/in/nelson-duarte-9b572433b" target="_blank">LinkedIn</a>
     </div>
   </header>
 
@@ -80,8 +80,9 @@
   </main>
 
   <footer>
-    © 2025 Missael Duarte | CV Online desarrollado en Vercel
+    © 2025 Nelson Duarte | CV Online desarrollado en Vercel
   </footer>
 </body>
 </html>
+
 
